syntax = "proto3";

package userapi;

option go_package = "./;proto";

service UserApi {
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
	string login_name = 1;
	string password = 2;
}

message RegisterResponse {
	string msg = 1;
}
